--- a/MRN_Project1_Template.ipynb
+++ b/MRN_Project1_Template.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 59,
       "metadata": {
         "collapsed": true,
         "id": "yyo7Y0BFPEzJ"
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 60,
       "metadata": {
         "id": "ZVHy2_qgPEzK"
       },
@@ -30,10 +30,10 @@
         {
           "data": {
             "text/plain": [
-              "'\\nAuthors: \\nAndrea Pimpinella <andrea.pimpinella@polimi.it>,\\nAlessandro E. C. Redondi <alessandroenrico.redondi@polimi.it>\\nAntonio Capone  <alessandroenrico.redondi@polimi.it>\\n\\nThis code preprocesses raw data and perform features extraction for Prediction Model of Video Quality Long Term QoE\\nuse case.\\n'"
+              "'\\nAuthors: \\nAndrea Pimpinella <andrea.pimpinella@polimi.it>,\\nAlessandro E. C. Redondi <alessandroenrico.redondi@polimi.it>\\nAntonio Capone  <antonio.capone@polimi.it>\\n\\nThis code preprocesses raw data and perform features extraction for Prediction Model of Video Quality Long Term QoE\\nuse case.\\n'"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 61,
       "metadata": {
         "id": "o0k4RwVXPEzL"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -441,7 +441,7 @@
               "4                             937  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 63,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -474,7 +474,7 @@
               "Name: User_Satisfaction, dtype: float64"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 64,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -495,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 65,
       "metadata": {
         "id": "YdD0jIi0PEzO"
       },
@@ -508,7 +508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 67,
       "metadata": {
         "id": "sdQgaazTPEzP"
       },
@@ -570,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 68,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -605,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -662,7 +662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 70,
       "metadata": {
         "id": "lNpnftbrPEzQ"
       },
@@ -692,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -765,7 +765,7 @@
               "Logistic Regression         [0.1]"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 71,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -802,7 +802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 72,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -876,7 +876,7 @@
               "Logistic Regression  0.625872"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 72,
           "metadata": {},
           "output_type": "execute_result"
         }
